# ETHPrague-2026-Hack

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  Cargo.toml  ETHPrague-Project-Analysis.md  Makefile  PROMPT.md  README.md  SECURITY.md  SKILL.md  agent.html  index.html  package-lock.json  package.json  request.md  send.html  server-utils.js  server-utils.test.js  server.js  swap.html
.cargo/: config.toml
agent/: main.ts  package-lock.json  package.json
agent/src/: graph.ts  supervisor.ts  tools.ts
agents/: .env.example  PROMPT.md  index.js  package-lock.json  package.json
agents/src/: supervisor.js
data/: transactions.json
dev/: run.js  scenario-real.js  scenario.js
docker/: Cargo.toml  Dockerfile  Makefile  applet.ld  build.sh  imximage.cfg  rust-toolchain.toml
docker/.cargo/: config.toml
docker/gotee_syscall/: Cargo.toml
docker/gotee_syscall/src/: lib.rs
docker/trusted_os/: applet_store.go  bridge.go  exec.go  go.mod  go.sum  handler.go  main.go  mem.go  reset.go  rpc.go
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  SECURITY.md
logs/: session_history.json
scratch/: ping-ai.js  test-blockscout-ens.js  test-contacts.js  test-ens-status.js
scripts/: armory-link.sh  flash-sd.sh  mock-bridge.ts  setup.sh  test-helpers.ts  upload.ts  wallet-start-dev.sh  wallet-start.sh
src/: config.js  main.jsx  main.rs  styles.css  supervisor.js
trusted_os/: applet_store.go  bridge.go  go.mod  go.sum  http.go  main.go  qemu_net.go  rpc.go  tz.go
wallet/: README.md  app.js  cli.ts  commands.md  index.html  secrets.env  server.ts  styles.css
(+98 files in other folders)
